<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/home"
        android:id="@+id/action_home"
        android:icon="@drawable/ic_home"
        />
    <item
        android:title="@string/cerca"
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        />
    <item
        android:title="@string/aggiungi"
        android:id="@+id/action_add"
        android:icon="@drawable/ic_add"
        />
    <item
        android:title="@string/preferiti"
        android:id="@+id/action_favorites"
        android:icon="@drawable/ic_heart"
        />
    <item
        android:title="@string/profilo"
        android:id="@+id/action_profile"
        android:icon="@drawable/ic_profile"
        />
</menu>