<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    android:id="@+id/fragment_login"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:textColor="#ff8f00"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtlogin"
        android:text="@string/log_in"
        android:textSize="36sp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/usernameText"
        app:layout_constraintVertical_chainStyle="packed"/>
    <EditText
        android:textAlignment="center"
        android:hint="@string/username"
        android:id="@+id/usernameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtlogin"
        app:layout_constraintBottom_toTopOf="@+id/passwordText"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:textAlignment="center"
        android:hint="@string/password"
        android:id="@+id/passwordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/usernameText"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"/>

    <Button
        android:background="#ff8f00"
        android:text="@string/login"
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/passwordText"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>