<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Iscriviti">



    <EditText
        android:hint="@string/username"
        android:fontFamily="@font/"
        android:textAlignment="center"
        android:id="@+id/edit_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/edit_email"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:hint="@string/email"
        android:textAlignment="center"
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/edit_username"
        app:layout_constraintBottom_toTopOf="@+id/edit_password"/>

    <EditText
        android:hint="@string/password"
        android:textAlignment="center"
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/edit_email"
        app:layout_constraintBottom_toTopOf="@+id/btn_iscriviti"/>

    <Button
        android:text="@string/iscriviti"
        android:id="@+id/btn_iscriviti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/edit_password"
        app:layout_constraintBottom_toBottomOf="parent"/>


</android.support.constraint.ConstraintLayout>